# mergemate

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs-build.yml  docs-lint.yml  docs.yml  lint.yml
assets/: style.css
docker/app/: Dockerfile
docs/: index.html  mergemate.html  search.js
docs/assets/: style.css
docs/mergemate/: app.html  main.html
src/mentra/cli/application/: cli_app.py
src/mentra/cli/domain/: cli_aggregate.py
src/mentra/cli/infrastructure/: cli_event_store.py
src/mergemate/: app.py  main.py
tests/unit/mentra/cli/application/interfaces/: test_cli_interface.py
